<resources>
    <string name="app_name">慧聊</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="login_btn">登录</string>
    <string name="reg_btn">注册</string>
    <string name="problem_reg_login">遇到了问题？</string>
    <string name="reg_login_label">登录注册慧聊</string>
    <string name="recent_message">消息</string>
    <string name="friend">好友</string>
    <string name="my_setting">我的设置</string>
    <string name="input_friend_account">请输入搜索的账号</string>
    <string name="add_friend">添加好友</string>
    <string name="select_friend">未选择</string>
    <string name="head_id">头    像</string>
    <string name="user_name">用户名</string>
    <string name="nike_name">昵    称</string>
    <string name="sex">性    别</string>
    <string name="address">地    址</string>
    <string name="tel">电    话</string>
    <string name="age">年    龄</string>
    <string name="find">发现</string>
    <string name="the_truth">心里话</string>
    <string name="close">注销</string>
    <string name="send">发送</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="is_close">确定注销吗?</string>
    <string name="re_input_password">请确认密码</string>
    <string name="re_input_password_hint">请再次输入确认密码</string>
    <string name="update_ok">确认修改</string>
    <string name="photo">相册</string>
    <string name="system">系统默认头像</string>
    <string name="back">返回</string>
    <string name="select_pic">选择图片作为你的头像</string>
    <string name="send_the_truth">请输入你想说的话</string>
    <string name="send_to_all">发送给广场的所有人</string>
    <string name="send_to_friend">发送给朋友们</string>
    <string name="select_send_to">谁可见</string>
</resources>
