<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   android:background="@drawable/background_13"
    >
    <!--<LinearLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_weight="1">-->
    <!--</LinearLayout>-->
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="6"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="35dp"
    android:paddingRight="20dp"
    android:paddingBottom="40dp" >

    <EditText
        android:id="@+id/RegLogin_Account_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/account_hint"
        android:paddingBottom="20dp"
        android:drawablePadding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:drawableStart="@mipmap/account"
        android:drawableLeft="@mipmap/account"
        android:theme="@style/MyEditText"
        />
    <EditText
        android:id="@+id/RegLogin_Password_EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:paddingBottom="20dp"
        android:drawablePadding="8dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:drawableStart="@mipmap/password"
        android:drawableLeft="@mipmap/password"
        android:theme="@style/MyEditText"
        android:inputType="textPassword" />
    <Button
        android:id="@+id/RegLogin_Login_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:layout_marginTop ="15dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:background="#00BFFF"
        />
    <Button
        android:id="@+id/RegLogin_Reg_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reg_btn"
        android:layout_marginTop ="20dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFFFFF"
        android:background="#00BFFF"
        />
    <TextView
        android:id="@+id/RegLogin_Problem_TextView"
        android:layout_marginTop ="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/problem_reg_login"
        android:textSize="16sp"
        />

</LinearLayout>
</LinearLayout>


