<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="vertical"
    android:layout_gravity="bottom"
    android:background="#00000000"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:background="#00000000"
        >
        <LinearLayout
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@drawable/shape_corner">

        <TextView
            android:id="@+id/Update_MySettings_Dialog_Photo_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/photo"
            android:textColor="@android:color/holo_red_dark"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"/>

        <TextView
            android:id="@+id/Update_MySettings_Dialog_System_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/system"
            android:textColor="@android:color/holo_blue_bright"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/Update_MySettings_Dialog_Back_TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/back"
            android:textColor="@android:color/background_dark"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@drawable/shape_corner"/>

    </LinearLayout>

</LinearLayout>