<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="7">

        <EditText
            android:id="@+id/Send_The_Truth_EditText"
            android:theme="@style/MyEditText"
            android:gravity="left"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/shape_corner_find"
            android:hint="@string/send_the_truth"
            android:paddingLeft="10dp"
            android:paddingTop="10dp"
            android:paddingRight="10dp"
            android:paddingBottom="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >

            <Button
                android:id="@+id/Send_The_Truth_Send_To_Who_Btn"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:gravity="center"
                android:background="@drawable/shape_corner"
                android:text="@string/select_send_to"
                android:textAppearance="?android:attr/textAppearanceLarge" />


            <Button
                android:id="@+id/Send_The_Truth_Send"
                android:layout_width="match_parent"
                android:layout_marginTop="10dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/send"
                android:textColor="@android:color/white"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:background="@drawable/shape_corner_dialog_button"/>


        </LinearLayout>

    </LinearLayout>

</LinearLayout>