<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:layout_gravity="center_vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@android:color/holo_blue_bright"/>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:text="@string/re_input_password"
            android:textColor="#000"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:background="@android:color/white"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#E4E4E4" />

        <EditText
            android:id="@+id/RegLogin_Dialog_EditText"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/re_input_password_hint"
            android:paddingBottom="10dp"
            android:drawablePadding="8dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:drawableStart="@mipmap/password"
            android:drawableLeft="@mipmap/password"
            android:theme="@style/MyEditText"
            android:inputType="textPassword"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:background="#E4E4E4" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">
        <Button
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/RegLogin_Dialog_Yes_Btn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reg_btn"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:background="@drawable/shape_corner_dialog_button"
            />
        <View
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:background="#E4E4E4" />

        <Button
            android:id="@+id/RegLogin_Dialog_No_Btn"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no"
            android:paddingBottom="15dp"
            android:paddingTop="15dp"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:background="@drawable/shape_corner_dialog_button"
            android:textAppearance="?android:attr/textAppearanceLarge"/>

    </LinearLayout>
</LinearLayout>